--- a/src/assets/emailtemplets/facility-confirmtion.html
+++ b/src/assets/emailtemplets/facility-confirmtion.html
@@ -59,14 +59,16 @@
                                     <td style="height:40px;">&nbsp;</td>
                                 </tr>
                                 <tr>
+
                                     <td style="padding:0 35px;">
                                         <h1
                                             style="color:#1e1e2d; font-weight:500; margin:0;font-size:32px;font-family:'Rubik',sans-serif;">
                                             Your Facility Has Been Approved.</h1>
+
                                         <span
                                             style="display:inline-block; vertical-align:middle; margin:29px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
                                         <p style="color:#455056; font-size:15px;line-height:24px; margin:0;">
-
+                                            Dear {{name}},<br><br>
                                             We are pleased to inform you that your facility has been approved by Purly
                                             Claim. As a temporary measure, we have assigned a password to access your
                                             facility. Your temporary password is 123456. Please change it as soon as
